--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -76,10 +76,10 @@
    "outputs": [],
    "source": [
     "# dump ncbi taxonomy\n",
-    "today = date.today()\n",
-    "taxdump = f'data/taxdump.{today}.tar.gz'\n",
-    "if not os.path.isfile(taxdump):\n",
-    "    ! wget ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdump.tar.gz -O {taxdump}"
+    "# today = date.today()\n",
+    "# taxdump = f'data/taxdump.{today}.tar.gz'\n",
+    "# if not os.path.isfile(taxdump):\n",
+    "#     ! wget ftp://ftp.ncbi.nlm.nih.gov/pub/taxonomy/taxdump.tar.gz -O {taxdump}"
    ]
   },
   {
@@ -88,9 +88,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import ete3\n",
+    "import ete3\n",
     "# download and install taxonomy\n",
-    "# ncbi = NCBITaxa()\n",
+    "ncbi = ete3.NCBITaxa()\n",
     "# only run update if needed\n",
     "# ncbi.update_taxonomy_database()"
    ]
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -893,44 +893,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] validating taxonomy against NCBI\n",
+      "[INFO] validating ORDER against NCBI\n",
+      "[ERROR] {''} not found in NCBI Taxonomy\n",
+      "[INFO] validating FAMILY against NCBI\n",
+      "[ERROR] {''} not found in NCBI Taxonomy\n",
+      "[INFO] validating GENUS against NCBI\n",
+      "[ERROR] {''} not found in NCBI Taxonomy\n",
+      "[INFO] validating SCIENTIFIC_NAME against NCBI\n",
+      "[ERROR] {''} not found in NCBI Taxonomy\n",
+      "[ERROR] Family Fabaceae (taxid 3803) does not belong to Hymenoptera (taxid 7399)\n",
+      "[WARNING] cannot validate ORDER for \"\"\n",
+      "[WARNING] cannot validate FAMILY for \"\"\n",
+      "[WARNING] cannot validate GENUS for \"\"\n",
+      "[WARNING] cannot validate FAMILY for \"\"\n"
+     ]
+    }
+   ],
    "source": [
-    "# to be replaced with ete3 taxonomy lookup\n",
-    "def validate_scientific_names(col, df, spp_fn, na_values = ['NOT_COLLECTED']):\n",
+    "def validate_ncbi_taxonomy(df, ncbi, na_values = ['NOT_COLLECTED']):\n",
     "    \n",
-    "    logging.info('validating species names against {!r}'.format(spp_fn))\n",
+    "    logging.info('validating taxonomy against NCBI')\n",
+    "    \n",
+    "    tax_columns = [\n",
+    "        'ORDER',\n",
+    "        'FAMILY',\n",
+    "        'GENUS',\n",
+    "        'SCIENTIFIC_NAME'\n",
+    "    ]        \n",
+    "    \n",
+    "    hierarchies = df[tax_columns].drop_duplicates().copy()\n",
+    "    \n",
+    "    tax_info = dict()\n",
+    "    \n",
+    "    for tax_level in tax_columns:\n",
+    "        \n",
+    "        logging.info(f'validating {tax_level} against NCBI')\n",
+    "        \n",
+    "        if tax_level not in df.columns:\n",
+    "                logging.error(f'{tax_level} column not found in manifest')\n",
+    "                continue\n",
+    "            \n",
+    "        tax_names = list(hierarchies[tax_level].unique())\n",
+    "        \n",
+    "        for na_value in na_values:\n",
+    "            tax_names.remove(na_value)\n",
+    "        \n",
+    "        tax_info[tax_level] = ncbi.get_name_translator(tax_names) \n",
+    "        \n",
+    "        unmatched_names = set(tax_names) - set(tax_info[tax_level].keys())\n",
+    "        logging.error(f'{unmatched_names} not found in NCBI Taxonomy')\n",
+    "        \n",
+    "        expected_rank = 'species' if (tax_level == 'SCIENTIFIC_NAME') else tax_level.lower()\n",
+    "        \n",
+    "        for tname, tids in tax_info[tax_level].items():\n",
+    "            \n",
+    "            if len(tids) > 1:\n",
+    "                logging.warning(f'Multiple taxids exist for {tname}: {tids}')\n",
+    "            \n",
+    "            ranks = ncbi.get_rank(tids)\n",
+    "            \n",
+    "            for i, r in ranks.items():\n",
+    "                if r != expected_rank:\n",
+    "                    logging.error(f'Unexpected rank for {tname} (taxid {i}): {r}')\n",
+    "                    \n",
+    "        df[f'{tax_level}_TAXID'] = df[tax_level].replace(tax_info[tax_level])\n",
     "\n",
-    "    # read species names from file\n",
-    "    valid_spp = pd.read_csv(spp_fn, header=None)[0].to_list()\n",
+    "                    \n",
+    "    def get_tax_id(tax_name, rank):\n",
+    "        \n",
+    "        if tax_name in na_values:\n",
+    "            return\n",
     "    \n",
-    "    if col not in df.columns:\n",
-    "        logging.error('{!r} column not found in manifest'.format(col))\n",
-    "        return\n",
-    "    series = df[col]\n",
-    "    series = exclude_missing(series, na_values)\n",
-    "    \n",
-    "    correct_genus = series.str.startswith('Anopheles')\n",
-    "    if not correct_genus.all():\n",
-    "        logging.error('expected Anopheles as genus in {!r} column, found: {}'.format(\n",
-    "                      col, series[~correct_genus].unique()))\n",
-    "    \n",
-    "    species = series.str.split(' ').str.get(1)\n",
-    "    correct_species = species.isin(valid_spp)\n",
-    "    \n",
-    "    if not correct_species.all():\n",
-    "        logging.error('species not in {!r} found in {!r} column: {}'.format(\n",
-    "                      spp_fn, col, series[~correct_species].unique()))\n",
-    "# df.loc[1, 'SCIENTIFIC_NAME'] = 'Anapherla askfnvjn'\n",
-    "# validate_scientific_names('SCIENTIFIC_NAME', df, spp_fn)"
+    "    # check correctness of taxonomy\n",
+    "    for _, r in hierarchies.iterrows():\n",
+    "        \n",
+    "        if r.ORDER in na_values:\n",
+    "            continue\n",
+    "        try:\n",
+    "            order_id = tax_info['ORDER'][r.ORDER][0]\n",
+    "        except KeyError:\n",
+    "            logging.warning(f'cannot validate ORDER for \"{r.ORDER}\"')\n",
+    "            \n",
+    "        if r.FAMILY in na_values:\n",
+    "            continue\n",
+    "        try:\n",
+    "            family_id = tax_info['FAMILY'][r.FAMILY][0]\n",
+    "            \n",
+    "            family_lineage = ncbi.get_lineage(family_id)\n",
+    "            \n",
+    "            if order_id not in family_lineage:\n",
+    "                logging.error(f'Family {r.FAMILY} (taxid {family_id}) does not belong to {r.ORDER} (taxid {order_id})')\n",
+    "        except KeyError:\n",
+    "            logging.warning(f'cannot validate FAMILY for \"{r.FAMILY}\"')\n",
+    "            \n",
+    "        if r.GENUS in na_values:\n",
+    "            continue\n",
+    "        try:\n",
+    "            genus_id = tax_info['GENUS'][r.GENUS][0]\n",
+    "            \n",
+    "            genus_lineage = ncbi.get_lineage(genus_id)\n",
+    "            \n",
+    "            if order_id not in genus_lineage:\n",
+    "                logging.error(f'Genus {r.GENUS} (taxid {genus_id}) does not belong to {r.ORDER} (taxid {order_id})')\n",
+    "            if family_id not in genus_lineage:\n",
+    "                logging.error(f'Genus {r.GENUS} (taxid {genus_id}) does not belong to {r.FAMILY} (taxid {family_id})')\n",
+    "        except KeyError:\n",
+    "            logging.warning(f'cannot validate GENUS for \"{r.GENUS}\"')\n",
+    "            \n",
+    "        if r.SCIENTIFIC_NAME in na_values:\n",
+    "            continue\n",
+    "        try:\n",
+    "            species_id = tax_info['SCIENTIFIC_NAME'][r.SCIENTIFIC_NAME][0]\n",
+    "            \n",
+    "            species_lineage = ncbi.get_lineage(species_id)\n",
+    "            \n",
+    "            if order_id not in species_lineage:\n",
+    "                logging.error(f'Species {r.SCIENTIFIC_NAME} (taxid {species_id}) does not belong to {r.ORDER} (taxid {order_id})')\n",
+    "            if family_id not in species_lineage:\n",
+    "                logging.error(f'Species {r.SCIENTIFIC_NAME} (taxid {species_id}) does not belong to {r.FAMILY} (taxid {family_id})')\n",
+    "            if genus_id not in species_lineage:\n",
+    "                logging.error(f'Species {r.SCIENTIFIC_NAME} (taxid {species_id}) does not belong to {r.GENUS} (taxid {genus_id})')\n",
+    "        except KeyError:\n",
+    "            logging.warning(f'cannot validate FAMILY for \"{r.FAMILY}\"')\n",
+    "            \n",
+    "    return df\n",
+    "        \n",
+    "                \n",
+    "validate_ncbi_taxonomy(df, ncbi);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] checking if example row was not deleted\n"
+     ]
+    }
+   ],
    "source": [
     "def check_undeleted_example(df):\n",
     "    \n",
@@ -939,12 +1051,14 @@
     "    if (df.index == 'malaise_example-small').any():\n",
     "        logging.error('example index was not deleted')\n",
     "    elif (df.RACK_OR_PLATE_ID == 'NBGW-001').any():\n",
-    "        logging.error('example plate ID was not deleted')"
+    "        logging.error('example plate ID was not deleted')\n",
+    "        \n",
+    "check_undeleted_example(df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -976,8 +1090,20 @@
       "[ERROR] invalid dates in 'DATE_OF_COLLECTION': ['']\n",
       "[INFO] validating country with coordinates\n",
       "[WARNING] could not locate country for coordinates ', ', partner country ''\n",
-      "[INFO] validating values in column 'LIFESTAGE'\n",
-      "[ERROR] invalid values in 'LIFESTAGE': {''}\n",
+      "[INFO] validating taxonomy against NCBI\n",
+      "[INFO] validating ORDER against NCBI\n",
+      "[ERROR] {''} not found in NCBI Taxonomy\n",
+      "[INFO] validating FAMILY against NCBI\n",
+      "[ERROR] {''} not found in NCBI Taxonomy\n",
+      "[INFO] validating GENUS against NCBI\n",
+      "[ERROR] {''} not found in NCBI Taxonomy\n",
+      "[INFO] validating SCIENTIFIC_NAME against NCBI\n",
+      "[ERROR] {''} not found in NCBI Taxonomy\n",
+      "[ERROR] Family Fabaceae (taxid 3803) does not belong to Hymenoptera (taxid 7399)\n",
+      "[WARNING] cannot validate ORDER for \"\"\n",
+      "[WARNING] cannot validate FAMILY for \"\"\n",
+      "[WARNING] cannot validate GENUS for \"\"\n",
+      "[WARNING] cannot validate FAMILY for \"\"\n",
       "[INFO] validating values in column 'SEX'\n",
       "[ERROR] invalid values in 'SEX': {''}\n",
       "[INFO] validating time column 'TIME_OF_COLLECTION'\n",
@@ -989,8 +1115,6 @@
       "[INFO] validating date column 'DATE_OF_PRESERVATION'\n",
       "[ERROR] invalid dates in 'DATE_OF_PRESERVATION': ['']\n",
       "[INFO] checking if example row was not deleted\n",
-      "/Users/am60/miniconda3/envs/validate_partner_manifest_dev/lib/python3.7/site-packages/pandas/core/indexes/base.py:140: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  result = op(self._values, np.asarray(other))\n",
       "[INFO] # ended validate_partner_manifest_v.1.0\n"
      ]
     }
@@ -1008,7 +1132,10 @@
     "    # read data\n",
     "    df = get_data(fn)\n",
     "    \n",
-    "    # prepare validation\n",
+    "    # read taxonomy\n",
+    "    ncbi = ete3.NCBITaxa()\n",
+    "    \n",
+    "    # prepare for validation\n",
     "    template_df = get_data(template_fn)\n",
     "    check_columns(df, template_df)\n",
     "    valid_dict = get_valid_dict(template_fn)\n",
@@ -1029,8 +1156,8 @@
     "    check_location(df, fn)\n",
     "    \n",
     "    # purple cols\n",
-    "    # validate_scientific_names('SCIENTIFIC_NAME', df, spp_fn, na_values=['NOT_COLLECTED'])\n",
-    "    validate_values('LIFESTAGE', df, valid_dict)\n",
+    "    # taxonomy validation adds a few columns\n",
+    "    df = validate_ncbi_taxonomy(df, ncbi, na_values = ['NOT_COLLECTED'])\n",
     "    validate_values('SEX', df, valid_dict)\n",
     "    # HABITAT not checked\n",
     "    validate_time('TIME_OF_COLLECTION', df)\n",
@@ -1059,10 +1186,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_excel('test.xlsx')"
+   ]
   },
   {
    "cell_type": "code",
