--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -943,7 +943,7 @@
       "[ERROR] ORDER: unexpected case for \"NOT_COLLECTED\", changing to \"Not_collected\" for validation\n",
       "[ERROR] ORDER: unexpected case for \"diptera\", changing to \"Diptera\" for validation\n",
       "[ERROR] ORDER: unexpected case for \"Diptera and Arachnidae\", changing to \"Diptera and arachnidae\" for validation\n",
-      "[ERROR] ORDER: {'Diptera and arachnidae', '', 'Not_collected', 'Not_applicable', 'Symphyleona', 'Tricoptera', 'Acari (subclass)'} not found in NCBI Taxonomy\n",
+      "[ERROR] ORDER: {'', 'Not_collected', 'Not_applicable', 'Diptera and arachnidae', 'Acari (subclass)', 'Tricoptera', 'Symphyleona'} not found in NCBI Taxonomy\n",
       "[WARNING] ORDER: found unexpected rank for Collembola (taxid 30001): class\n",
       "[INFO] ORDER: using only first matching rank for Plecoptera (taxid 50622): order\n",
       "[WARNING] ORDER: found unexpected rank for Protura (taxid 29999): class\n",
@@ -951,7 +951,7 @@
       "[ERROR] FAMILY: unexpected case for \"NOT_COLLECTED\", changing to \"Not_collected\" for validation\n",
       "[ERROR] FAMILY: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
       "[ERROR] FAMILY: unexpected case for \"Unkown and Acari\", changing to \"Unkown and acari\" for validation\n",
-      "[ERROR] FAMILY: {'', 'Not_collected', 'Aphidiodea', 'Not_applicable', 'Unkown and acari'} not found in NCBI Taxonomy\n",
+      "[ERROR] FAMILY: {'', 'Not_collected', 'Not_applicable', 'Unkown and acari', 'Aphidiodea'} not found in NCBI Taxonomy\n",
       "[WARNING] FAMILY: found unexpected rank for Aphidoidea (taxid 33385): superfamily\n",
       "[INFO] validating GENUS against NCBI\n",
       "[ERROR] GENUS: unexpected case for \"NOT_COLLECTED\", changing to \"Not_collected\" for validation\n",
@@ -1296,7 +1296,7 @@
       "[ERROR] ORDER: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
       "[ERROR] ORDER: unexpected case for \"diptera\", changing to \"Diptera\" for validation\n",
       "[ERROR] ORDER: unexpected case for \"Diptera and Arachnidae\", changing to \"Diptera and arachnidae\" for validation\n",
-      "[ERROR] ORDER: {'Diptera and arachnidae', '', 'Not_applicable', 'Symphyleona', 'Tricoptera', 'Acari (subclass)'} not found in NCBI Taxonomy\n",
+      "[ERROR] ORDER: {'', 'Not_applicable', 'Diptera and arachnidae', 'Acari (subclass)', 'Tricoptera', 'Symphyleona'} not found in NCBI Taxonomy\n",
       "[WARNING] ORDER: found unexpected rank for Collembola (taxid 30001): class\n",
       "[INFO] ORDER: using only first matching rank for Plecoptera (taxid 50622): order\n",
       "[WARNING] ORDER: found unexpected rank for Protura (taxid 29999): class\n",
@@ -1418,7 +1418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1449,7 +1449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1500,7 +1500,7 @@
       "[ERROR] Found and excluded non-numeric SERIES: ['example-small', 'example-large', 'example-handcaught']\n",
       "[ERROR] Found and excluded 768 empty rows based on RACK_OR_PLATE_ID and TUBE_OR_WELL_ID\n",
       "[ERROR] duplicate TUBE_OR_WELL_ID for plate MOZZ00000924A: ['']\n",
-      "[ERROR] in TUBE_OR_WELL_ID for plate MOZZ00000924A, wells {'B12', 'A12', 'E12', 'D12', 'G12', 'C12', 'F12'} are missing, wells {''} are excessive\n",
+      "[ERROR] in TUBE_OR_WELL_ID for plate MOZZ00000924A, wells {'F12', 'D12', 'A12', 'G12', 'C12', 'E12', 'B12'} are missing, wells {''} are excessive\n",
       "[ERROR] last well H12 is not blank at SERIES [96]: in SCIENTIFIC_NAME, expected \"blank sample\", found ['NOT_APPLICABLE']\n",
       "[ERROR] invalid values in 'PRESERVATIVE_SOLUTION': {''}\n",
       "[ERROR] invalid values in 'BOTTLE_DIRECTION': {''}\n",
@@ -1508,12 +1508,10 @@
       "[ERROR] invalid values in 'HAZARD_GROUP': {'', 'NOT_APPLICABLE'}\n",
       "[ERROR] invalid values in 'REGULATORY_COMPLIANCE': {''}\n",
       "[ERROR] invalid dates in 'DATE_OF_COLLECTION': ['NOT_APPLICABLE' '']\n",
-      "[ERROR] problem parsing coordinates 'NOT_APPLICABLE, NOT_APPLICABLE'\n",
-      "[ERROR] problem parsing coordinates ', '\n",
       "[WARNING] could not locate country for coordinates 'NOT_APPLICABLE, NOT_APPLICABLE', partner country 'UNITED KINGDOM'\n",
       "[WARNING] could not locate country for coordinates ', ', partner country ''\n",
       "[ERROR] ORDER: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
-      "[ERROR] ORDER: {'', 'Not_applicable', 'Acari (subclass)'} not found in NCBI Taxonomy\n",
+      "[ERROR] ORDER: {'', 'Acari (subclass)', 'Not_applicable'} not found in NCBI Taxonomy\n",
       "[WARNING] ORDER: found unexpected rank for Collembola (taxid 30001): class\n",
       "[ERROR] FAMILY: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
       "[ERROR] FAMILY: {'', 'Not_applicable'} not found in NCBI Taxonomy\n",
@@ -1536,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1551,23 +1549,22 @@
       "[ERROR] Found and excluded non-numeric SERIES: ['example-small', 'example-large', 'example-handcaught-large', 'example-handcaught-small']\n",
       "[ERROR] last well H12 is not blank at SERIES [1248]: in SCIENTIFIC_NAME, expected \"blank sample\", found ['']\n",
       "[ERROR] invalid values in 'PRESERVATIVE_SOLUTION': {''}\n",
-      "[ERROR] invalid values in 'BOTTLE_DIRECTION': {'n', ''}\n",
-      "[ERROR] invalid values in 'ORGANISM_PART': {'WHOLE_ORGANISm', '', 'WHOLE_ORG', 'WhOLE_ORGANISM', 'whOLE_ORGANISM', 'Whole organism', 'WhoLE_ORGANISM'}\n",
+      "[ERROR] invalid values in 'BOTTLE_DIRECTION': {'', 'n'}\n",
+      "[ERROR] invalid values in 'ORGANISM_PART': {'', 'WHOLE_ORGANISm', 'whOLE_ORGANISM', 'WHOLE_ORG', 'Whole organism', 'WhOLE_ORGANISM', 'WhoLE_ORGANISM'}\n",
       "[ERROR] invalid values in 'HAZARD_GROUP': {''}\n",
       "[ERROR] invalid values in 'REGULATORY_COMPLIANCE': {''}\n",
       "[ERROR] invalid dates in 'DATE_OF_COLLECTION': ['']\n",
-      "[ERROR] problem parsing coordinates ', '\n",
       "[WARNING] could not locate country for coordinates '-3.844011, 57.186786', partner country 'UNITED KINGDOM'\n",
       "[WARNING] could not locate country for coordinates ', ', partner country ''\n",
       "[ERROR] ORDER: unexpected case for \"LEPIDOPTERA\", changing to \"Lepidoptera\" for validation\n",
       "[ERROR] ORDER: {'', 'Aranae'} not found in NCBI Taxonomy\n",
       "[WARNING] ORDER: found unexpected rank for Collembola (taxid 30001): class\n",
       "[ERROR] FAMILY: unexpected case for \"vespidae\", changing to \"Vespidae\" for validation\n",
-      "[ERROR] FAMILY: {'', 'Aphidae', 'Formicdae', 'Tentredinidae', 'Canthaidae', 'Apidea'} not found in NCBI Taxonomy\n",
+      "[ERROR] FAMILY: {'', 'Aphidae', 'Tentredinidae', 'Formicdae', 'Apidea', 'Canthaidae'} not found in NCBI Taxonomy\n",
       "[WARNING] FAMILY: found unexpected rank for Ichneumon (taxid 27520): genus\n",
       "[WARNING] FAMILY: found unexpected rank for Limoniinae (taxid 52737): subfamily\n",
       "[ERROR] GENUS: unexpected case for \"prizoma\", changing to \"Prizoma\" for validation\n",
-      "[ERROR] GENUS: {'', 'Dzidzickia', 'Prizoma'} not found in NCBI Taxonomy\n",
+      "[ERROR] GENUS: {'', 'Prizoma', 'Dzidzickia'} not found in NCBI Taxonomy\n",
       "[ERROR] SCIENTIFIC_NAME: {'', 'Vespa vulgaris', 'Lycophotia porphyreya'} not found in NCBI Taxonomy\n",
       "[ERROR] Family Syrphidae (taxid 34680) does not belong to Hemiptera (taxid 7524)\n",
       "[ERROR] invalid values in 'SEX': {''}\n",
@@ -1584,7 +1581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1634,11 +1631,10 @@
       "[ERROR] last well H12 is not blank at SERIES [96, 192, 288, 384, 480, 576, 1152, 1440, 1536, 1632, 1728, 1824, 1920]: in SCIENTIFIC_NAME, expected \"blank sample\", found ['', '', '', '', '', '', '', '', '', '', '', '', '']\n",
       "[ERROR] invalid values in 'PRESERVATIVE_SOLUTION': {'', 'Ethanol'}\n",
       "[ERROR] invalid values in 'BOTTLE_DIRECTION': {'', 'South', 'North'}\n",
-      "[ERROR] invalid values in 'ORGANISM_PART': {'', 'Antenna', 'Abdomen', 'Leg', 'Whole'}\n",
+      "[ERROR] invalid values in 'ORGANISM_PART': {'', 'Leg', 'Whole', 'Antenna', 'Abdomen'}\n",
       "[ERROR] invalid values in 'HAZARD_GROUP': {''}\n",
       "[ERROR] invalid values in 'REGULATORY_COMPLIANCE': {''}\n",
       "[ERROR] invalid dates in 'DATE_OF_COLLECTION': ['' '23/06/0201']\n",
-      "[ERROR] problem parsing coordinates ', '\n",
       "[ERROR] country mismatch for coordinates '51.7717, -1.3333', partner country 'GRASSLAND', coordinate country 'UNITED KINGDOM'\n",
       "[ERROR] country mismatch for coordinates '51.7736, -1.3383', partner country 'WOODLAND', coordinate country 'UNITED KINGDOM'\n",
       "[WARNING] could not locate country for coordinates ', ', partner country ''\n",
@@ -1647,13 +1643,13 @@
       "[ERROR] multiple partner countries for coordinates '51.7736000000002, -1.33829999999999': ['WOODLAND' 'WOODS']skipping coordinate validation\n",
       "[ERROR] country mismatch for coordinates '51.7736000000003, -1.33829999999999', partner country 'WOODLAND', coordinate country 'UNITED KINGDOM'\n",
       "[ERROR] ORDER: unexpected case for \"lepidoptera\", changing to \"Lepidoptera\" for validation\n",
-      "[ERROR] ORDER: {'', 'Hymenotera', 'Hermetera', '?'} not found in NCBI Taxonomy\n",
+      "[ERROR] ORDER: {'', 'Hermetera', 'Hymenotera', '?'} not found in NCBI Taxonomy\n",
       "[WARNING] ORDER: found unexpected rank for Collembola (taxid 30001): class\n",
       "[ERROR] FAMILY: unexpected case for \"wasp reduced venation on wing compared to flies\", changing to \"Wasp reduced venation on wing compared to flies\" for validation\n",
       "[ERROR] FAMILY: unexpected case for \"two triangles on the wing formed by veins\", changing to \"Two triangles on the wing formed by veins\" for validation\n",
       "[ERROR] FAMILY: unexpected case for \"possible parasite attached\", changing to \"Possible parasite attached\" for validation\n",
       "[ERROR] FAMILY: unexpected case for \"formicidae\", changing to \"Formicidae\" for validation\n",
-      "[ERROR] FAMILY: {'', 'Phoridae?', 'Two triangles on the wing formed by veins', 'Aphidae', 'Muscidae?', 'Possible parasite attached', 'Psychididae', 'Wasp reduced venation on wing compared to flies', 'Miridae?', 'Empidae', 'Aphydidae', 'Simulidae'} not found in NCBI Taxonomy\n",
+      "[ERROR] FAMILY: {'', 'Aphidae', 'Psychididae', 'Phoridae?', 'Possible parasite attached', 'Miridae?', 'Wasp reduced venation on wing compared to flies', 'Simulidae', 'Two triangles on the wing formed by veins', 'Muscidae?', 'Aphydidae', 'Empidae'} not found in NCBI Taxonomy\n",
       "[WARNING] FAMILY: found unexpected rank for Aphidoidea (taxid 33385): superfamily\n",
       "[WARNING] FAMILY: found unexpected rank for Chironomoidea (taxid 41828): superfamily\n",
       "[WARNING] FAMILY: found unexpected rank for Nematocera (taxid 7148): suborder\n",
@@ -1661,7 +1657,7 @@
       "[WARNING] FAMILY: found unexpected rank for Vespula (taxid 7451): genus\n",
       "[ERROR] GENUS: unexpected case for \"(Alticini)\", changing to \"(alticini)\" for validation\n",
       "[ERROR] GENUS: unexpected case for \"(Belytinae)\", changing to \"(belytinae)\" for validation\n",
-      "[ERROR] GENUS: {'', '(belytinae)', 'Vulgaris', '(alticini)'} not found in NCBI Taxonomy\n",
+      "[ERROR] GENUS: {'', '(alticini)', 'Vulgaris', '(belytinae)'} not found in NCBI Taxonomy\n",
       "[ERROR] SCIENTIFIC_NAME: unexpected case for \"lucorum sensu lato\", changing to \"Lucorum sensu lato\" for validation\n",
       "[ERROR] SCIENTIFIC_NAME: unexpected case for \"pascuorum\", changing to \"Pascuorum\" for validation\n",
       "[ERROR] SCIENTIFIC_NAME: unexpected case for \"major\", changing to \"Major\" for validation\n",
@@ -1669,9 +1665,9 @@
       "[ERROR] SCIENTIFIC_NAME: unexpected case for \"aucupariae\", changing to \"Aucupariae\" for validation\n",
       "[ERROR] SCIENTIFIC_NAME: unexpected case for \"heraclei\", changing to \"Heraclei\" for validation\n",
       "[ERROR] SCIENTIFIC_NAME: unexpected case for \"terrestris\", changing to \"Terrestris\" for validation\n",
-      "[ERROR] SCIENTIFIC_NAME: {'', 'Aucupariae', 'Elegans', 'Brachypalpoides lentus\\n', 'Terrestris', 'Heraclei', 'Pascuorum', 'Lucorum sensu lato'} not found in NCBI Taxonomy\n",
+      "[ERROR] SCIENTIFIC_NAME: {'', 'Brachypalpoides lentus\\n', 'Heraclei', 'Elegans', 'Pascuorum', 'Lucorum sensu lato', 'Terrestris', 'Aucupariae'} not found in NCBI Taxonomy\n",
       "[WARNING] SCIENTIFIC_NAME: found unexpected rank for Major (taxid 1925465): genus\n",
-      "[ERROR] invalid values in 'SEX': {'', 'Female', 'Male', 'F', 'female'}\n",
+      "[ERROR] invalid values in 'SEX': {'', 'Male', 'F', 'Female', 'female'}\n",
       "[ERROR] invalid times in 'TIME_OF_COLLECTION': ['']\n",
       "[ERROR] invalid times in 'DURATION_OF_COLLECTION': ['']\n",
       "[ERROR] invalid values in 'COLLECTION_METHOD': {''}\n"
@@ -1680,6 +1676,57 @@
    ],
    "source": [
     "df = validate('../results/Bioscan metadata_Jan_22_WYTHAM_WOODS.xlsx', template_fn, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WARNING] # manifest ../results/NE BIOSCAN_Manifest_V1.0_Yarner_2021.xlsx\n",
+      "[WARNING] trailing spaces found in column 'WHAT_3_WORDS', SERIES [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 97, 98, 99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182, 183, 184]. Removing for validation\n",
+      "[WARNING] trailing spaces found in column 'ORDER', SERIES [88, 343, 344, 345, 650, 756, 757, 758, 759, 760, 833, 861, 905, 906, 907, 908, 936]. Removing for validation\n",
+      "[ERROR] last well H12 is not blank at SERIES [96]: in SCIENTIFIC_NAME, expected \"blank sample\", found ['NOT_APPLICABLE']\n",
+      "[ERROR] invalid values in 'BOTTLE_DIRECTION': {''}\n",
+      "[ERROR] invalid values in 'ORGANISM_PART': {''}\n",
+      "[ERROR] invalid values in 'HAZARD_GROUP': {'', 'NOT_APPLICABLE'}\n",
+      "[ERROR] invalid values in 'REGULATORY_COMPLIANCE': {'', 'y'}\n",
+      "[ERROR] invalid dates in 'DATE_OF_COLLECTION': ['NOT_APPLICABLE' '']\n",
+      "[ERROR] multiple partner countries for coordinates 'NOT_APPLICABLE, NOT_APPLICABLE': ['UNITED KINGDOM' 'NOT_APPLICABLE']skipping coordinate validation\n",
+      "[ERROR] multiple partner countries for coordinates '50.598618, -3.7209498': ['UNITED KINGDOM' '']skipping coordinate validation\n",
+      "[WARNING] could not locate country for coordinates ', ', partner country ''\n",
+      "[ERROR] ORDER: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
+      "[ERROR] ORDER: unexpected case for \"diptera\", changing to \"Diptera\" for validation\n",
+      "[ERROR] ORDER: unexpected case for \"Diptera and Arachnidae\", changing to \"Diptera and arachnidae\" for validation\n",
+      "[ERROR] ORDER: {'', 'Not_applicable', 'Diptera and arachnidae', 'Acari (subclass)', 'Tricoptera', 'Symphyleona'} not found in NCBI Taxonomy\n",
+      "[WARNING] ORDER: found unexpected rank for Collembola (taxid 30001): class\n",
+      "[WARNING] ORDER: found unexpected rank for Protura (taxid 29999): class\n",
+      "[ERROR] FAMILY: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
+      "[ERROR] FAMILY: unexpected case for \"Unkown and Acari\", changing to \"Unkown and acari\" for validation\n",
+      "[ERROR] FAMILY: {'', 'Aphidiodea', 'Not_applicable', 'Unkown and acari'} not found in NCBI Taxonomy\n",
+      "[WARNING] FAMILY: found unexpected rank for Aphidoidea (taxid 33385): superfamily\n",
+      "[ERROR] GENUS: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
+      "[ERROR] GENUS: {'', 'Not_applicable'} not found in NCBI Taxonomy\n",
+      "[ERROR] SCIENTIFIC_NAME: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
+      "[ERROR] SCIENTIFIC_NAME: {'', 'Not_applicable'} not found in NCBI Taxonomy\n",
+      "[ERROR] Family Syrphidae (taxid 34680) does not belong to Hymenoptera (taxid 7399)\n",
+      "[ERROR] Genus Syrphus (taxid 224255) does not belong to Hymenoptera (taxid 7399)\n",
+      "[ERROR] Species Syrphus ribesii (taxid 1124549) does not belong to Hymenoptera (taxid 7399)\n",
+      "[ERROR] invalid values in 'SEX': {''}\n",
+      "[ERROR] invalid times in 'TIME_OF_COLLECTION': ['NOT_APPLICABLE' '']\n",
+      "[ERROR] invalid times in 'DURATION_OF_COLLECTION': ['NOT_APPLICABLE' '']\n",
+      "[ERROR] invalid values in 'COLLECTION_METHOD': {''}\n",
+      "[ERROR] found non-integer value in TIME_ELAPSED_FROM_COLLECTION_TO_PLATING: \"NOT_APPLICABLE\"\n",
+      "[ERROR] invalid dates in 'DATE_OF_PRESERVATION': ['NOT_APPLICABLE']\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = validate('../results/NE BIOSCAN_Manifest_V1.0_Yarner_2021.xlsx', template_fn, verbose=False)"
    ]
   },
   {
