two manifests from botanical garden

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -944,7 +944,7 @@
       "[ERROR] ORDER: unexpected case for \"NOT_COLLECTED\", changing to \"Not_collected\" for validation\n",
       "[ERROR] ORDER: unexpected case for \"diptera\", changing to \"Diptera\" for validation\n",
       "[ERROR] ORDER: unexpected case for \"Diptera and Arachnidae\", changing to \"Diptera and arachnidae\" for validation\n",
-      "[ERROR] ORDER: {'', 'Not_collected', 'Symphyleona', 'Acari (subclass)', 'Diptera and arachnidae', 'Not_applicable', 'Tricoptera'} not found in NCBI Taxonomy\n",
+      "[ERROR] ORDER: {'Acari (subclass)', '', 'Not_collected', 'Not_applicable', 'Tricoptera', 'Diptera and arachnidae', 'Symphyleona'} not found in NCBI Taxonomy\n",
       "[WARNING] ORDER: found unexpected rank for Collembola (taxid 30001): class\n",
       "[INFO] ORDER: using only first matching rank for Plecoptera (taxid 50622): order\n",
       "[WARNING] ORDER: found unexpected rank for Protura (taxid 29999): class\n",
@@ -952,7 +952,7 @@
       "[ERROR] FAMILY: unexpected case for \"NOT_COLLECTED\", changing to \"Not_collected\" for validation\n",
       "[ERROR] FAMILY: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
       "[ERROR] FAMILY: unexpected case for \"Unkown and Acari\", changing to \"Unkown and acari\" for validation\n",
-      "[ERROR] FAMILY: {'', 'Not_collected', 'Not_applicable', 'Aphidiodea', 'Unkown and acari'} not found in NCBI Taxonomy\n",
+      "[ERROR] FAMILY: {'', 'Aphidiodea', 'Not_collected', 'Not_applicable', 'Unkown and acari'} not found in NCBI Taxonomy\n",
       "[WARNING] FAMILY: found unexpected rank for Aphidoidea (taxid 33385): superfamily\n",
       "[INFO] validating GENUS against NCBI\n",
       "[ERROR] GENUS: unexpected case for \"NOT_COLLECTED\", changing to \"Not_collected\" for validation\n",
@@ -1744,14 +1744,14 @@
       "[ERROR] ORDER: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
       "[ERROR] ORDER: unexpected case for \"diptera\", changing to \"Diptera\" for validation\n",
       "[ERROR] ORDER: unexpected case for \"Diptera and Arachnidae\", changing to \"Diptera and arachnidae\" for validation\n",
-      "[ERROR] ORDER: {'', 'Symphyleona', 'Acari (subclass)', 'Diptera and arachnidae', 'Not_applicable', 'Tricoptera'} not found in NCBI Taxonomy\n",
+      "[ERROR] ORDER: {'Acari (subclass)', '', 'Not_applicable', 'Tricoptera', 'Diptera and arachnidae', 'Symphyleona'} not found in NCBI Taxonomy\n",
       "[WARNING] ORDER: found unexpected rank for Collembola (taxid 30001): class\n",
       "[INFO] ORDER: using only first matching rank for Plecoptera (taxid 50622): order\n",
       "[WARNING] ORDER: found unexpected rank for Protura (taxid 29999): class\n",
       "[INFO] validating FAMILY against NCBI\n",
       "[ERROR] FAMILY: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
       "[ERROR] FAMILY: unexpected case for \"Unkown and Acari\", changing to \"Unkown and acari\" for validation\n",
-      "[ERROR] FAMILY: {'', 'Aphidiodea', 'Unkown and acari', 'Not_applicable'} not found in NCBI Taxonomy\n",
+      "[ERROR] FAMILY: {'', 'Unkown and acari', 'Not_applicable', 'Aphidiodea'} not found in NCBI Taxonomy\n",
       "[WARNING] FAMILY: found unexpected rank for Aphidoidea (taxid 33385): superfamily\n",
       "[INFO] validating GENUS against NCBI\n",
       "[ERROR] GENUS: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
@@ -1864,6 +1864,73 @@
     "\n",
     "## Real manifests validation starts here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WARNING] # manifest ../results/20220322/NBGW-[20210805]-manifest.xlsx\n",
+      "[ERROR] Found and excluded 768 empty rows based on RACK_OR_PLATE_ID and TUBE_OR_WELL_ID\n",
+      "[WARNING] ORDER: found unexpected rank for Acari (taxid 6933): subclass\n",
+      "[WARNING] ORDER: found unexpected rank for Collembola (taxid 30001): class\n",
+      "[ERROR] FAMILY: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
+      "[ERROR] FAMILY: {'Not_applicable'} not found in NCBI Taxonomy\n",
+      "[ERROR] GENUS: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
+      "[ERROR] GENUS: {'Not_applicable'} not found in NCBI Taxonomy\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = validate('../results/20220322/NBGW-[20210805]-manifest.xlsx', template_fn, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WARNING] # manifest ../results/20220322/NBGW-[20220105]-manifest.xlsx\n",
+      "[ERROR] Found and excluded non-numeric SERIES: ['']\n",
+      "[ERROR] in TUBE_OR_WELL_ID for plate NBGW_003, wells {'E12'} are missing, wells set() are excessive\n",
+      "[ERROR] last well H12 is not blank at SERIES [95]: in SCIENTIFIC_NAME, expected \"blank sample\", found ['NOT_APPLICABLE']. These samples will be included in further analysis.\n",
+      "[ERROR] invalid values in 'HAZARD_GROUP': {'NOT_APPLICABLE'}\n",
+      "[ERROR] invalid dates in 'DATE_OF_COLLECTION': ['NOT_APPLICABLE']\n",
+      "[ERROR] problem parsing coordinates 'NOT_APPLICABLE, NOT_APPLICABLE'\n",
+      "[WARNING] could not locate country for coordinates 'NOT_APPLICABLE, NOT_APPLICABLE', partner country 'NOT_APPLICABLE'\n",
+      "[ERROR] ORDER: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
+      "[ERROR] ORDER: {'Not_applicable'} not found in NCBI Taxonomy\n",
+      "[WARNING] ORDER: found unexpected rank for Collembola (taxid 30001): class\n",
+      "[ERROR] FAMILY: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
+      "[ERROR] FAMILY: {'Not_applicable'} not found in NCBI Taxonomy\n",
+      "[ERROR] GENUS: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
+      "[ERROR] GENUS: {'Not_applicable'} not found in NCBI Taxonomy\n",
+      "[ERROR] SCIENTIFIC_NAME: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
+      "[ERROR] SCIENTIFIC_NAME: {'Not_applicable'} not found in NCBI Taxonomy\n",
+      "[ERROR] invalid times in 'TIME_OF_COLLECTION': ['NOT_APPLICABLE']\n",
+      "[ERROR] invalid times in 'DURATION_OF_COLLECTION': ['NOT_APPLICABLE']\n",
+      "[ERROR] found non-integer value in TIME_ELAPSED_FROM_COLLECTION_TO_PLATING: \"NOT_APPLICABLE\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = validate('../results/20220322/NBGW-[20220105]-manifest.xlsx', template_fn, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
