another manifest, separate bulk validation in a new notebook

--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -1858,11 +1858,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raise Exception('Done for now')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "\n",
-    "## Real manifests validation starts here"
+    "## Real manifests validation starts here - now also moved to separate notebook"
    ]
   },
   {
@@ -2269,9 +2278,7 @@
      ]
     }
    ],
-   "source": [
-    "raise Exception('Done for now')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
