setup validation for bioscan v2, expand plate-only metadata, mark blanks instead of removing

--- a/work/validate_anospp.ipynb
+++ b/work/validate_anospp.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "76f985d4",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "52c6d3f5",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
       "[INFO] found 288 samples across 3 plates\n",
       "[INFO] Checking and excluding blank samples\n",
       "[ERROR] last well H12 is not blank at SERIES [288]: in ORGANISM_PART, expected \"NOT_APPLICABLE\", found ['TEST']. These samples will be included in further analysis.\n",
-      "[INFO] Blanks removed: 286 samples of 288 left for downstream analysis\n",
+      "[INFO] Blanks located: 286 samples of 288 left for downstream analysis\n",
       "[INFO] validating values in column 'PRESERVATIVE_SOLUTION'\n",
       "[INFO] excluding 0 [] samples without data in 'PRESERVATIVE_SOLUTION'\n",
       "[INFO] validating values in column 'ORGANISM_PART'\n",
@@ -60,7 +60,7 @@
       "[INFO] validating values in column 'SAMPLING_LOCATION_SIZE'\n",
       "[INFO] excluding 0 [] samples without data in 'SAMPLING_LOCATION_SIZE'\n",
       "[INFO] validating taxonomy against NCBI\n",
-      "[INFO] validating PREDICTED_ORDER against NCBI\n",
+      "[INFO] validating PREDICTED_ORDER_OR_GROUP against NCBI\n",
       "[INFO] validating PREDICTED_FAMILY against NCBI\n",
       "[INFO] validating PREDICTED_GENUS against NCBI\n",
       "[INFO] genus: using only first matching rank for Anopheles (taxid 7164): genus\n",
@@ -91,19 +91,19 @@
       "[INFO] excluding 0 [] samples without data in 'OUTDOORS_INDOORS'\n",
       "[ERROR] invalid values in 'OUTDOORS_INDOORS': {''}\n",
       "[INFO] validating values in column 'BLOOD_MEAL'\n",
-      "[INFO] excluding 191 [''] samples without data in 'BLOOD_MEAL'\n",
+      "[INFO] excluding 193 [''] samples without data in 'BLOOD_MEAL'\n",
       "[INFO] validating values in column 'GRAVIDITY'\n",
-      "[INFO] excluding 191 [''] samples without data in 'GRAVIDITY'\n",
+      "[INFO] excluding 193 [''] samples without data in 'GRAVIDITY'\n",
       "[INFO] validating date column 'DATE_OF_PRESERVATION'\n",
-      "[INFO] excluding 95 [''] samples without data in 'DATE_OF_PRESERVATION'\n",
+      "[INFO] excluding 96 [''] samples without data in 'DATE_OF_PRESERVATION'\n",
       "[INFO] checking that DATE_OF_COLLECTION are earlier than DATE_OF_PRESERVATION\n",
       "[ERROR] DATE_OF_COLLECTION values are later than DATE_OF_PRESERVATION for SERIES [9]\n",
       "[INFO] validating numeric format in ELEVATION\n",
-      "[INFO] excluding 191 [''] samples without data in 'ELEVATION'\n",
+      "[INFO] excluding 193 [''] samples without data in 'ELEVATION'\n",
       "[INFO] validating numeric format in DNA_EXTRACT_VOLUME_PROVIDED\n",
-      "[INFO] excluding 286 [''] samples without data in 'DNA_EXTRACT_VOLUME_PROVIDED'\n",
+      "[INFO] excluding 288 [''] samples without data in 'DNA_EXTRACT_VOLUME_PROVIDED'\n",
       "[INFO] validating numeric format in DNA_EXTRACT_CONCENTRATION\n",
-      "[INFO] excluding 286 [''] samples without data in 'DNA_EXTRACT_CONCENTRATION'\n",
+      "[INFO] excluding 288 [''] samples without data in 'DNA_EXTRACT_CONCENTRATION'\n",
       "[INFO] # ended started validate_anospp_partner_manifest_v.4.0\n"
      ]
     }
@@ -112,6 +112,7 @@
     "def validate_anospp(fn, template_fn='../data/Anopheles_Metadata_Manifest_V4.0_20220825.xlsx', \n",
     "                    verbose=False, version='4.0', samples_sheet='TAB 2 Metadata Entry'):\n",
     "    '''\n",
+    "    ANOSPP partner manifest validation\n",
     "    Validation follows the order of columns order in data entry sheet\n",
     "    '''\n",
     "\n",
@@ -140,32 +141,31 @@
     "    df = validate_series(df)\n",
     "    # RACK_OR_PLATE_ID, TUBE_OR_WELL_ID\n",
     "    df = validate_plates_wells(df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')\n",
-    "    \n",
     "    # check and exclude blanks\n",
-    "    df = check_blanks(df)\n",
-    "    \n",
+    "    is_blank = check_blanks(df)\n",
     "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
-    "    date_coll = validate_date('DATE_OF_COLLECTION', df, na_values=['NOT_COLLECTED',''])\n",
+    "    # columns below validated for non-blank samples only\n",
+    "    date_coll = validate_date('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
     "    # COLLECTION_COUNTRY, DECIMAL_LATITUDE, DECIMAL_LONGITUDE\n",
-    "    validate_country_and_coordinates(df, fn, na_values=[''])\n",
+    "    validate_country_and_coordinates(df[~is_blank], fn, na_values=[''])\n",
     "    # COLLECTION_LOCATION not checked\n",
-    "    validate_values('SAMPLING_LOCATION_SIZE', df, valid_dict)\n",
+    "    validate_values('SAMPLING_LOCATION_SIZE', df[~is_blank], valid_dict)\n",
     "    \n",
-    "    # purple cols\n",
+    "    # purple cols - validate non-blank samples only\n",
     "    df = validate_taxonomy(df, ncbi, anospp=True, na_values = [''])\n",
-    "    validate_values('SPECIMEN_IDENTITY_RISK', df, valid_dict)\n",
+    "    validate_values('SPECIMEN_IDENTITY_RISK', df[~is_blank], valid_dict)\n",
     "    # IDENTIFIED_HOW not checked\n",
-    "    validate_values('LIFESTAGE', df, valid_dict)\n",
-    "    validate_values('SEX', df, valid_dict)\n",
-    "    validate_time('TIME_OF_COLLECTION', df, na_values=['NOT_COLLECTED',''])\n",
-    "    validate_time_period('DURATION_OF_COLLECTION', df, na_values=['NOT_COLLECTED',''])\n",
-    "    validate_values('COLLECTION_METHOD', df, valid_dict)\n",
-    "    validate_values('OUTDOORS_INDOORS', df, valid_dict)\n",
+    "    validate_values('LIFESTAGE', df[~is_blank], valid_dict)\n",
+    "    validate_values('SEX', df[~is_blank], valid_dict)\n",
+    "    validate_time('TIME_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    validate_time_period('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict)\n",
+    "    validate_values('OUTDOORS_INDOORS', df[~is_blank], valid_dict)\n",
     "    # DESCRIPTION_OF_COLLECTION_METHOD not checked\n",
     "    # PRESERVATION_APPROACH not checked\n",
     "    \n",
-    "    # white cols\n",
+    "    # white cols - validate all samples\n",
     "    validate_values('BLOOD_MEAL', df, valid_dict, na_values=[''])\n",
     "    validate_values('GRAVIDITY', df, valid_dict, na_values=[''])\n",
     "    # HABITAT not checked\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "50c12fdf",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/g7/vnlptw7d5pb544zsj_bypk44000h93/T/ipykernel_82441/1375769833.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Setup complete'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/var/folders/g7/vnlptw7d5pb544zsj_bypk44000h93/T/ipykernel_3064/1375769833.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Setup complete'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mException\u001b[0m: Setup complete"
      ]
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "418da3cc",
    "metadata": {},
    "outputs": [
@@ -232,11 +232,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WARNING] # manifest ../results/20221010_anospp_4_amy_lemonde/Anopheles_Metadata_Manifest_V4.0_MGIVEC.xlsx\n",
-      "[ERROR] in TUBE_OR_WELL_ID for plate AYDI_511, wells {'B9', 'E6', 'A9', 'A12', 'G10', 'H11', 'D8', 'G12', 'A8', 'F9', 'F5', 'A6', 'A10', 'G8', 'C6', 'F8', 'H9', 'B10', 'D4', 'D9', 'E12', 'H4', 'B6', 'C10', 'A11', 'D5', 'E8', 'C12', 'E11', 'G9', 'D6', 'G7', 'F10', 'D12', 'F7', 'C9', 'D7', 'F4', 'B7', 'C5', 'D10', 'B11', 'E4', 'B4', 'B5', 'H7', 'E9', 'F12', 'G4', 'E10', 'E5', 'H6', 'H10', 'G6', 'E7', 'D11', 'G5', 'H8', 'B8', 'B12', 'C11', 'A5', 'C8', 'F6', 'H5', 'H12', 'G11', 'C7', 'C4', 'A7', 'F11'} are missing, wells set() are excessive\n",
-      "[ERROR] last well H12 is not blank at SERIES [96, 192, 288, 384, 480, 576, 672, 768, 864, 960]: in ORGANISM_PART, expected \"NOT_APPLICABLE\", found ['', '', '', '', '', '', '', '', '', '']. These samples will be included in further analysis.\n",
+      "[WARNING] # manifest ../results/20221010_anospp_4_amy_lemonde/Anopheles_Metadata_Manifest_V4.0_MGIVEC_v2.xlsx\n",
+      "[ERROR] in TUBE_OR_WELL_ID for plate AYDI_511, wells {'D9', 'E10', 'B6', 'B8', 'D7', 'C9', 'D12', 'E11', 'A7', 'G10', 'C5', 'F7', 'F10', 'H8', 'B10', 'A8', 'H12', 'A9', 'D4', 'B5', 'G5', 'C8', 'C12', 'H11', 'B7', 'H9', 'F11', 'D11', 'A10', 'G4', 'E6', 'G6', 'E9', 'D6', 'F9', 'E8', 'C6', 'B9', 'H6', 'G9', 'F6', 'D5', 'G8', 'A5', 'F12', 'E7', 'H4', 'F5', 'D10', 'B11', 'C10', 'A11', 'A6', 'H7', 'A12', 'G7', 'G12', 'H5', 'H10', 'C7', 'E12', 'B12', 'F4', 'B4', 'E5', 'C11', 'C4', 'G11', 'F8', 'D8', 'E4'} are missing, wells set() are excessive\n",
       "[ERROR] invalid values in 'PRESERVATIVE_SOLUTION': {''}\n",
-      "[ERROR] invalid values in 'ORGANISM_PART': {'', 'WHOLE_ORGASNISM'}\n",
+      "[ERROR] invalid values in 'ORGANISM_PART': {''}\n",
       "[ERROR] invalid values in 'SAMPLING_LOCATION_SIZE': {''}\n",
       "[ERROR] invalid values in 'SPECIMEN_IDENTITY_RISK': {''}\n",
       "[ERROR] invalid values in 'LIFESTAGE': {''}\n",
@@ -245,13 +244,12 @@
       "[ERROR] invalid values in 'OUTDOORS_INDOORS': {''}\n",
       "[ERROR] invalid values in 'BLOOD_MEAL': {'NOT_COLLECTED'}\n",
       "[ERROR] invalid values in 'GRAVIDITY': {'NOT_COLLECTED'}\n",
-      "[ERROR] found non-numeric value in ELEVATION: \"NOT_COLLECTED\"\n",
-      "[ERROR] found non-numeric value in DNA_EXTRACT_VOLUME_PROVIDED: \"20µl\"\n"
+      "[ERROR] found non-numeric value in ELEVATION: \"NOT_COLLECTED\"\n"
      ]
     }
    ],
    "source": [
-    "fn = '../results/20221010_anospp_4_amy_lemonde/Anopheles_Metadata_Manifest_V4.0_MGIVEC.xlsx'\n",
+    "fn = '../results/20221010_anospp_4_amy_lemonde/Anopheles_Metadata_Manifest_V4.0_MGIVEC_v2.xlsx'\n",
     "df = validate_anospp(fn, template_fn, samples_sheet='TAB 2 Metadata Entry')"
    ]
   },
