--- a/work/validate_partner_manifest_dev.ipynb
+++ b/work/validate_partner_manifest_dev.ipynb
@@ -308,7 +308,7 @@
     }
    ],
    "source": [
-    "def validate_plates_wells(df, plate_col, well_col):\n",
+    "def validate_plates_wells(df, plate_col, well_col, bioscan=False):\n",
     "    \n",
     "    # expect only complete 96-well plates\n",
     "    logging.info(f'validating {plate_col} and {well_col}')\n",
@@ -319,21 +319,46 @@
     "        logging.error(f'Found and excluded {empty_rows.sum()} empty rows based on {plate_col} and {well_col}')\n",
     "        df = df.loc[~empty_rows]\n",
     "    \n",
-    "    logging.info(f'found {df.shape[0]} samples across {df[plate_col].nunique()} plates')\n",
-    "    \n",
     "    # add 96-well plate well IDs to validation\n",
     "    row_id = list('ABCDEFGH')\n",
     "    col_id = range(1,13)\n",
-    "    expected_wells = set([r + str(c) for (r,c) in itertools.product(row_id, col_id)])\n",
+    "    expected_wells = [r + str(c) for (r,c) in itertools.product(row_id, col_id)]\n",
+    "    \n",
+    "    pdfs = []\n",
     "    \n",
     "    for plate, pdf in df.groupby(plate_col):\n",
+    "        # If plate level only metadata is being entered\n",
+    "        # put “PLATE_ONLY” in well \n",
+    "        # and use only one row to capture the metadata for the whole plate\n",
+    "        if bioscan and (pdf[well_col] == 'PLATE_ONLY').any():\n",
+    "            # elevate to warning\n",
+    "            logging.warning(f'found PLATE_ONLY plate {plate}, expanding to well-level')\n",
+    "            if pdf.shape[0] > 1:\n",
+    "                logging.error(f'too many rows in PLATE_ONLY plate {plate}, expected one')\n",
+    "            # expand to 96 rows\n",
+    "            pdf = pd.DataFrame(pdf.iloc[0] for i in range(len(expected_wells)))\n",
+    "            pdf[well_col] = expected_wells\n",
+    "            # H12 blank\n",
+    "            for col in pdf.columns:\n",
+    "                if col == 'ORGANISM_PART':\n",
+    "                    pdf[col].iloc[-1]='NOT_APPLICABLE'\n",
+    "                elif col not in ['SERIES','CATCH_LOT','RACK_OR_PLATE_ID',\n",
+    "                                 'TUBE_OR_WELL_ID','ORGANISM_PART','PRESERVATIVE_SOLUTION']:\n",
+    "                    pdf[col].iloc[-1]=''\n",
     "        dup_wells =  pdf[well_col].duplicated()\n",
     "        if dup_wells.any():\n",
     "            logging.error(f'duplicate {well_col} for plate {plate}: {pdf.loc[dup_wells, well_col].unique()}')\n",
     "        observed_wells = set(pdf[well_col])\n",
+    "        expected_wells = set(expected_wells)\n",
     "        if observed_wells != expected_wells:\n",
     "            logging.error(f'in {well_col} for plate {plate}, wells {expected_wells - observed_wells} '\n",
     "                          f'are missing, wells {observed_wells - expected_wells} are excessive')\n",
+    "        pdfs.append(pdf)\n",
+    "    \n",
+    "    if bioscan:\n",
+    "        df = pd.concat(pdfs)\n",
+    "    \n",
+    "    logging.info(f'found {df.shape[0]} samples across {df[plate_col].nunique()} plates')\n",
     "    \n",
     "    return df\n",
     "        \n",
@@ -351,7 +376,7 @@
      "text": [
       "[INFO] Checking and excluding blank samples\n",
       "[ERROR] last well H12 is not blank at SERIES [288]: in ORGANISM_PART, expected \"NOT_APPLICABLE\", found ['TEST']. These samples will be included in further analysis.\n",
-      "[INFO] Blanks removed: 286 samples of 288 left for downstream analysis\n"
+      "[INFO] Blanks located: 286 samples of 288 left for downstream analysis\n"
      ]
     },
     {
@@ -387,14 +412,14 @@
     "        ))\n",
     "    \n",
     "    # exclude blanks from downstream analysis    \n",
-    "    logging.info('Blanks removed: {} samples of {} left for downstream analysis'.format(\n",
+    "    logging.info('Blanks located: {} samples of {} left for downstream analysis'.format(\n",
     "        non_blank_df.shape[0], df.shape[0]))\n",
     "    \n",
     "    \n",
-    "    return non_blank_df\n",
+    "    return is_blank\n",
     "print(df.shape)\n",
-    "df = check_blanks(df)\n",
-    "print(df.shape)"
+    "is_blank = check_blanks(df)\n",
+    "print(df[~is_blank].shape)"
    ]
   },
   {
@@ -465,7 +490,7 @@
      "text": [
       "[INFO] validating date column 'DATE_OF_COLLECTION'\n",
       "[INFO] excluding 0 [] samples without data in 'DATE_OF_COLLECTION'\n",
-      "[ERROR] invalid dates in 'DATE_OF_COLLECTION': ['TEST']\n",
+      "[ERROR] invalid dates in 'DATE_OF_COLLECTION': ['TEST' '']\n",
       "[ERROR] future dates in 'DATE_OF_COLLECTION': [Timestamp('2117-08-21 00:00:00')]\n"
      ]
     },
@@ -537,7 +562,7 @@
      "output_type": "stream",
      "text": [
       "[INFO] validating time column 'TIME_OF_COLLECTION'\n",
-      "[INFO] excluding 191 [''] samples without data in 'TIME_OF_COLLECTION'\n",
+      "[INFO] excluding 193 [''] samples without data in 'TIME_OF_COLLECTION'\n",
       "[ERROR] invalid times in 'TIME_OF_COLLECTION': ['\"33.00\"']\n"
      ]
     },
@@ -597,7 +622,7 @@
      "output_type": "stream",
      "text": [
       "[INFO] validating time period column 'DURATION_OF_COLLECTION'\n",
-      "[INFO] excluding 192 [''] samples without data in 'DURATION_OF_COLLECTION'\n",
+      "[INFO] excluding 194 [''] samples without data in 'DURATION_OF_COLLECTION'\n",
       "[ERROR] invalid times in 'DURATION_OF_COLLECTION': ['P1WT1H' 'TEST']\n"
      ]
     }
@@ -797,7 +822,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>286 rows × 6 columns</p>\n",
+       "<p>288 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -829,7 +854,7 @@
        "287            52.0193, 0.2424  UNITED KINGDOM  UNITED KINGDOM  \n",
        "288            52.0193, 0.2424  UNITED KINGDOM  UNITED KINGDOM  \n",
        "\n",
-       "[286 rows x 6 columns]"
+       "[288 rows x 6 columns]"
       ]
      },
      "execution_count": 18,
@@ -839,11 +864,14 @@
    ],
    "source": [
     "# TODO include tests\n",
-    "def validate_country_and_coordinates(df, fn, na_values=[]):\n",
+    "def validate_country_and_coordinates(df, fn, na_values=[], bioscan=False):\n",
     "    \n",
     "    logging.info('validating country with coordinates')\n",
     "    \n",
-    "    country_col, lat_col, lon_col = 'COLLECTION_COUNTRY', 'DECIMAL_LATITUDE', 'DECIMAL_LONGITUDE'\n",
+    "    if bioscan:\n",
+    "        country_col, lat_col, lon_col = 'COUNTRY_OF_COLLECTION', 'DECIMAL_LATITUDE', 'DECIMAL_LONGITUDE'\n",
+    "    else:\n",
+    "        country_col, lat_col, lon_col = 'COLLECTION_COUNTRY', 'DECIMAL_LATITUDE', 'DECIMAL_LONGITUDE'\n",
     "\n",
     "    try:\n",
     "        loc_df_complete = df[[country_col, lat_col, lon_col]].copy()\n",
@@ -941,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +977,7 @@
      "output_type": "stream",
      "text": [
       "[INFO] validating taxonomy against NCBI\n",
-      "[INFO] validating PREDICTED_ORDER against NCBI\n",
+      "[INFO] validating PREDICTED_ORDER_OR_GROUP against NCBI\n",
       "[INFO] validating PREDICTED_FAMILY against NCBI\n",
       "[INFO] validating PREDICTED_GENUS against NCBI\n",
       "[INFO] genus: using only first matching rank for Anopheles (taxid 7164): genus\n",
@@ -959,20 +987,6 @@
       "[INFO] cannot validate PREDICTED_SCIENTIFIC_NAME for \"Anopheles test\", skipping taxonomy consistency check\n",
       "[INFO] cannot validate PREDICTED_SCIENTIFIC_NAME for \"Anopheles stricklandi\", skipping taxonomy consistency check\n",
       "[INFO] cannot validate PREDICTED_SCIENTIFIC_NAME for \"\", skipping taxonomy consistency check\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "          order     family      genus                species\n",
-      "SERIES                                                      \n",
-      "1       Diptera  Culicidae  Anopheles     Anopheles plumbeus\n",
-      "2       Diptera  Culicidae  Anopheles      Anopheles gambiae\n",
-      "3       Diptera  Culicidae  Anopheles     Anopheles coluzzii\n",
-      "4       Diptera  Culicidae  Anopheles         Anopheles test\n",
-      "5       Diptera  Culicidae  Anopheles  Anopheles stricklandi\n",
-      "97      Diptera  Culicidae  Anopheles                       \n"
      ]
     },
     {
@@ -1010,10 +1024,10 @@
        "      <th>DNA_EXTRACTION_DESCRIPTION</th>\n",
        "      <th>DNA_EXTRACT_VOLUME_PROVIDED</th>\n",
        "      <th>DNA_EXTRACT_CONCENTRATION</th>\n",
-       "      <th>PREDICTED_ORDER</th>\n",
+       "      <th>PREDICTED_ORDER_OR_GROUP</th>\n",
        "      <th>PREDICTED_FAMILY</th>\n",
        "      <th>PREDICTED_GENUS</th>\n",
-       "      <th>PREDICTED_ORDER_TAXID</th>\n",
+       "      <th>PREDICTED_ORDER_OR_GROUP_TAXID</th>\n",
        "      <th>PREDICTED_FAMILY_TAXID</th>\n",
        "      <th>PREDICTED_GENUS_TAXID</th>\n",
        "      <th>PREDICTED_SCIENTIFIC_NAME_TAXID</th>\n",
@@ -1310,7 +1324,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>286 rows × 42 columns</p>\n",
+       "<p>288 rows × 42 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1384,33 +1398,33 @@
        "287                                                             \n",
        "288                                                             \n",
        "\n",
-       "       DNA_EXTRACT_CONCENTRATION PREDICTED_ORDER PREDICTED_FAMILY  \\\n",
-       "SERIES                                                              \n",
-       "1                                        Diptera        Culicidae   \n",
-       "2                                        Diptera        Culicidae   \n",
-       "3                                        Diptera        Culicidae   \n",
-       "4                                        Diptera        Culicidae   \n",
-       "5                                        Diptera        Culicidae   \n",
-       "...                          ...             ...              ...   \n",
-       "284                                      Diptera        Culicidae   \n",
-       "285                                      Diptera        Culicidae   \n",
-       "286                                      Diptera        Culicidae   \n",
-       "287                                      Diptera        Culicidae   \n",
-       "288                                      Diptera        Culicidae   \n",
+       "       DNA_EXTRACT_CONCENTRATION PREDICTED_ORDER_OR_GROUP PREDICTED_FAMILY  \\\n",
+       "SERIES                                                                       \n",
+       "1                                                 Diptera        Culicidae   \n",
+       "2                                                 Diptera        Culicidae   \n",
+       "3                                                 Diptera        Culicidae   \n",
+       "4                                                 Diptera        Culicidae   \n",
+       "5                                                 Diptera        Culicidae   \n",
+       "...                          ...                      ...              ...   \n",
+       "284                                               Diptera        Culicidae   \n",
+       "285                                               Diptera        Culicidae   \n",
+       "286                                               Diptera        Culicidae   \n",
+       "287                                               Diptera        Culicidae   \n",
+       "288                                               Diptera        Culicidae   \n",
        "\n",
-       "       PREDICTED_GENUS PREDICTED_ORDER_TAXID PREDICTED_FAMILY_TAXID  \\\n",
-       "SERIES                                                                \n",
-       "1            Anopheles                  7147                   7157   \n",
-       "2            Anopheles                  7147                   7157   \n",
-       "3            Anopheles                  7147                   7157   \n",
-       "4            Anopheles                  7147                   7157   \n",
-       "5            Anopheles                  7147                   7157   \n",
-       "...                ...                   ...                    ...   \n",
-       "284          Anopheles                  7147                   7157   \n",
-       "285          Anopheles                  7147                   7157   \n",
-       "286          Anopheles                  7147                   7157   \n",
-       "287          Anopheles                  7147                   7157   \n",
-       "288          Anopheles                  7147                   7157   \n",
+       "       PREDICTED_GENUS PREDICTED_ORDER_OR_GROUP_TAXID PREDICTED_FAMILY_TAXID  \\\n",
+       "SERIES                                                                         \n",
+       "1            Anopheles                           7147                   7157   \n",
+       "2            Anopheles                           7147                   7157   \n",
+       "3            Anopheles                           7147                   7157   \n",
+       "4            Anopheles                           7147                   7157   \n",
+       "5            Anopheles                           7147                   7157   \n",
+       "...                ...                            ...                    ...   \n",
+       "284          Anopheles                           7147                   7157   \n",
+       "285          Anopheles                           7147                   7157   \n",
+       "286          Anopheles                           7147                   7157   \n",
+       "287          Anopheles                           7147                   7157   \n",
+       "288          Anopheles                           7147                   7157   \n",
        "\n",
        "       PREDICTED_GENUS_TAXID PREDICTED_SCIENTIFIC_NAME_TAXID  \n",
        "SERIES                                                        \n",
@@ -1426,10 +1440,10 @@
        "287                     7164                          227531  \n",
        "288                     7164                          227531  \n",
        "\n",
-       "[286 rows x 42 columns]"
+       "[288 rows x 42 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,7 +1455,7 @@
     "    logging.info('validating taxonomy against NCBI')\n",
     "    \n",
     "    if anospp:\n",
-    "        df['PREDICTED_ORDER'] = 'Diptera'\n",
+    "        df['PREDICTED_ORDER_OR_GROUP'] = 'Diptera'\n",
     "        df['PREDICTED_FAMILY'] = 'Culicidae'\n",
     "        df['PREDICTED_GENUS'] = 'Anopheles'\n",
     "        \n",
@@ -1450,9 +1464,9 @@
     "            for line in f:\n",
     "                harbach_spp.append('Anopheles ' + line.strip())\n",
     "        harbach_spp = set(harbach_spp)\n",
-    "    \n",
+    "        \n",
     "    tax_levels = {\n",
-    "        'PREDICTED_ORDER':'order',\n",
+    "        'PREDICTED_ORDER_OR_GROUP':'order',\n",
     "        'PREDICTED_FAMILY':'family',\n",
     "        'PREDICTED_GENUS':'genus',\n",
     "        'PREDICTED_SCIENTIFIC_NAME':'species'\n",
@@ -1533,7 +1547,7 @@
     "        try:\n",
     "            order_id = tax_info['order'][r.order]\n",
     "        except KeyError:\n",
-    "            logging.info(f'cannot validate PREDICTED_ORDER for \"{r.order}\", skipping taxonomy consistency check')\n",
+    "            logging.info(f'cannot validate PREDICTED_ORDER_OR_GROUP for \"{r.order}\", skipping taxonomy consistency check')\n",
     "            continue\n",
     "            \n",
     "        if r.genus in na_values:\n",
@@ -1599,8 +1613,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[INFO] validating int format in TIME_ELAPSED_FROM_COLLECTION_TO_PLATING\n",
-      "[ERROR] TIME_ELAPSED_FROM_COLLECTION_TO_PLATING column not found in manifest\n"
+      "[INFO] validating numeric format in ELEVATION\n",
+      "[INFO] excluding 0 [] samples without data in 'ELEVATION'\n",
+      "[ERROR] found non-numeric value in ELEVATION: \"\"\n"
      ]
     }
    ],
@@ -1625,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1649,7 @@
      "text": [
       "[INFO] validating date column 'DATE_OF_COLLECTION'\n",
       "[INFO] excluding 0 [] samples without data in 'DATE_OF_COLLECTION'\n",
-      "[ERROR] invalid dates in 'DATE_OF_COLLECTION': ['TEST']\n",
+      "[ERROR] invalid dates in 'DATE_OF_COLLECTION': ['TEST' '']\n",
       "[ERROR] future dates in 'DATE_OF_COLLECTION': [Timestamp('2117-08-21 00:00:00')]\n",
       "[INFO] validating date column 'DATE_OF_PRESERVATION'\n",
       "[INFO] excluding 0 [] samples without data in 'DATE_OF_PRESERVATION'\n",
@@ -1649,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
