--- a/work/validate_bioscan.ipynb
+++ b/work/validate_bioscan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "id": "2ed8b533",
    "metadata": {},
    "outputs": [],
@@ -13,273 +13,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "230f6339",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[INFO] # started validate_bioscan_partner_manifest_v.2.0\n",
+      "[WARNING] # manifest ../data/BIOSCAN_Manifest_V2.0_20221017.xlsx\n",
+      "[INFO] reading data from '../data/BIOSCAN_Manifest_V2.0_20221017.xlsx'\n",
+      "[INFO] reading data from '../data/BIOSCAN_Manifest_V2.0_20221017.xlsx'\n",
+      "[INFO] checking manifest columns against template\n",
+      "[INFO] extracting value validation data from '../data/BIOSCAN_Manifest_V2.0_20221017.xlsx'\n",
+      "[INFO] validating SERIES\n",
+      "[INFO] validating RACK_OR_PLATE_ID and TUBE_OR_WELL_ID\n",
+      "[WARNING] found PLATE_ONLY plate SANG_001, expanding to well-level\n",
+      "[INFO] found 288 samples across 3 plates\n",
+      "[INFO] Checking and excluding blank samples\n",
+      "[INFO] Blanks located: 274 samples of 288 left for downstream analysis\n",
+      "[INFO] validating values in column 'ORGANISM_PART'\n",
+      "[INFO] excluding 0 [] samples without data in 'ORGANISM_PART'\n",
+      "[INFO] validating values in column 'PRESERVATIVE_SOLUTION'\n",
+      "[INFO] excluding 0 [] samples without data in 'PRESERVATIVE_SOLUTION'\n",
+      "[INFO] validating values in column 'BOTTLE_DIRECTION'\n",
+      "[INFO] excluding 0 [] samples without data in 'BOTTLE_DIRECTION'\n",
+      "[INFO] validating date column 'DATE_OF_COLLECTION'\n",
+      "[INFO] excluding 0 ['NOT_COLLECTED', ''] samples without data in 'DATE_OF_COLLECTION'\n",
+      "[INFO] validating country with coordinates\n",
+      "[INFO] validating time column 'TIME_OF_COLLECTION'\n",
+      "[INFO] excluding 0 [] samples without data in 'TIME_OF_COLLECTION'\n",
+      "[INFO] validating time period column 'DURATION_OF_COLLECTION'\n",
+      "[INFO] excluding 0 ['NOT_COLLECTED'] samples without data in 'DURATION_OF_COLLECTION'\n",
+      "[INFO] validating values in column 'COLLECTION_METHOD'\n",
+      "[INFO] excluding 0 [] samples without data in 'COLLECTION_METHOD'\n",
+      "[INFO] validating date column 'DATE_OF_PLATING'\n",
+      "[INFO] excluding 0 ['NOT_COLLECTED', ''] samples without data in 'DATE_OF_PLATING'\n",
+      "[INFO] checking that DATE_OF_COLLECTION are earlier than DATE_OF_PLATING\n",
+      "[INFO] validating taxonomy against NCBI\n",
+      "[INFO] validating PREDICTED_ORDER_OR_GROUP against NCBI\n",
+      "[INFO] validating PREDICTED_FAMILY against NCBI\n",
+      "[WARNING] family: found unexpected rank for Ichneumonoidea (taxid 7401): superfamily\n",
+      "[WARNING] family: found unexpected rank for Nematocera (taxid 7148): suborder\n",
+      "[WARNING] family: found unexpected rank for Sciaroidea (taxid 41830): superfamily\n",
+      "[INFO] validating PREDICTED_GENUS against NCBI\n",
+      "[INFO] validating PREDICTED_SCIENTIFIC_NAME against NCBI\n",
+      "[INFO] validating values in column 'SPECIMEN_IDENTITY_RISK'\n",
+      "[INFO] excluding 271 [''] samples without data in 'SPECIMEN_IDENTITY_RISK'\n",
+      "[INFO] validating values in column 'LIFESTAGE'\n",
+      "[INFO] excluding 274 [''] samples without data in 'LIFESTAGE'\n",
+      "[INFO] validating values in column 'SEX'\n",
+      "[INFO] excluding 265 [''] samples without data in 'SEX'\n",
+      "[INFO] validating values in column 'SORTING_SOLUTION_USED'\n",
+      "[INFO] excluding 0 [] samples without data in 'SORTING_SOLUTION_USED'\n",
+      "[INFO] validating values in column 'CATCH_BOTTLE_TEMPERATURE_STORAGE'\n",
+      "[INFO] excluding 0 [] samples without data in 'CATCH_BOTTLE_TEMPERATURE_STORAGE'\n",
+      "[INFO] validating values in column 'PLATE_TEMPERATURE_STORAGE'\n",
+      "[INFO] excluding 0 [] samples without data in 'PLATE_TEMPERATURE_STORAGE'\n",
+      "[INFO] validating numeric format in ELEVATION\n",
+      "[INFO] excluding 288 [''] samples without data in 'ELEVATION'\n",
+      "[INFO] # ended validate_bioscan_partner_manifest_v.2.0\n"
+     ]
+    }
+   ],
    "source": [
-    "def validate_bioscan(fn, template_fn, verbose=False, version='1.0'):\n",
+    "def validate_bioscan(fn, template_fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
+    "                     verbose=False, version='2.0', samples_sheet='TAB 2 Metadata Entry'):\n",
     "    '''\n",
+    "    BIOSCAN partner manifest validation\n",
     "    Validation follows the order of columns order in data entry sheet\n",
     "    '''\n",
     "\n",
     "    setup_logging(verbose=verbose)\n",
     "\n",
-    "    logging.info(f'# started validate_partner_manifest_v.{version}')\n",
+    "    logging.info(f'# started validate_bioscan_partner_manifest_v.{version}')\n",
     "    logging.warning(f'# manifest {fn}')\n",
     "\n",
     "    # read data\n",
-    "    df = get_data(fn)\n",
+    "    df = get_data(fn, sheet=samples_sheet)\n",
+    "    df = remove_trailing_spaces(df)\n",
     "    \n",
     "    # read NCBI taxonomy\n",
     "    ncbi = ete3.NCBITaxa()\n",
     "    \n",
     "    # prepare for validation\n",
-    "    template_df = get_data(template_fn)\n",
+    "    template_df = get_data(template_fn, sheet='TAB 2 Metadata Entry')\n",
     "    check_columns(df, template_df)\n",
-    "    valid_dict = get_valid_dict(template_fn)\n",
+    "    valid_dict = get_valid_dict(template_fn, validation_sheet='TAB 4 DO NOT EDIT - Data Valida')\n",
     "\n",
     "    # orange cols\n",
     "    # exclude empty series\n",
     "    df = validate_series(df)\n",
-    "    df = validate_plates_wells(df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID')\n",
-    "    \n",
-    "    # check and exclude blanks\n",
-    "    df = check_blanks(df)\n",
-    "    \n",
-    "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
     "    # CATCH_LOT not checked TODO do not allow missing\n",
-    "    validate_values('BOTTLE_DIRECTION', df, valid_dict)\n",
+    "    df = validate_plates_wells(df, 'RACK_OR_PLATE_ID', 'TUBE_OR_WELL_ID', bioscan=True)\n",
+    "    # check and exclude blanks - TODO yield all samples for STS\n",
+    "    is_blank = check_blanks(df)\n",
     "    validate_values('ORGANISM_PART', df, valid_dict, sep='|')\n",
-    "    validate_values('HAZARD_GROUP', df, valid_dict)\n",
-    "    validate_values('REGULATORY_COMPLIANCE', df, valid_dict)\n",
-    "    date_coll = validate_date('DATE_OF_COLLECTION', df, na_values=['NOT_COLLECTED'])\n",
-    "    check_location(df, fn)\n",
+    "    validate_values('PRESERVATIVE_SOLUTION', df, valid_dict)\n",
+    "    # columns below validated for non-blank samples only\n",
+    "    validate_values('BOTTLE_DIRECTION', df[~is_blank], valid_dict)\n",
+    "    date_coll = validate_date('DATE_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    # COUNTRY_OF_COLLECTION, DECIMAL_LATITUDE, DECIMAL_LONGITUDE\n",
+    "    validate_country_and_coordinates(df[~is_blank], fn, na_values=[''], bioscan=True)\n",
+    "    # COLLECTION_LOCATION not checked\n",
     "    \n",
-    "    # purple cols\n",
-    "    # taxonomy validation adds a few columns\n",
-    "    df = validate_ncbi_taxonomy(df, ncbi, na_values = ['NOT_COLLECTED'])\n",
-    "    validate_values('SEX', df, valid_dict)\n",
-    "    # HABITAT not checked\n",
-    "    validate_time('TIME_OF_COLLECTION', df)\n",
-    "    validate_time_period('DURATION_OF_COLLECTION', df, na_values=['NOT_COLLECTED'])\n",
-    "    validate_values('COLLECTION_METHOD', df, valid_dict)\n",
+    "    # purple cols - valiated for non-blank samples\n",
+    "    # WHAT_3_WORDS not checked\n",
+    "    validate_time('TIME_OF_COLLECTION', df[~is_blank])\n",
+    "    validate_time_period('DURATION_OF_COLLECTION', df[~is_blank], na_values=['NOT_COLLECTED'])\n",
+    "    validate_values('COLLECTION_METHOD', df[~is_blank], valid_dict)\n",
+    "    date_plat = validate_date('DATE_OF_PLATING', df[~is_blank], na_values=['NOT_COLLECTED',''])\n",
+    "    compare_dates(before=date_coll, after=date_plat)\n",
+    "    # taxonomy validation adds taxid columns to original dataframe\n",
+    "    df = validate_taxonomy(df, ncbi, anospp=False, na_values = [''])\n",
+    "    # TODO check that SPECIMEN_IDENTITY_RISK only filled where species ID exists\n",
+    "    validate_values('SPECIMEN_IDENTITY_RISK', df[~is_blank], valid_dict, na_values=[''])\n",
+    "    validate_values('LIFESTAGE', df[~is_blank], valid_dict, na_values=[''])\n",
+    "    validate_values('SEX', df[~is_blank], valid_dict, na_values=[''])\n",
+    "    validate_values('SORTING_SOLUTION_USED', df[~is_blank], valid_dict)\n",
+    "    validate_values('CATCH_BOTTLE_TEMPERATURE_STORAGE', df[~is_blank], valid_dict)\n",
+    "    validate_values('PLATE_TEMPERATURE_STORAGE', df[~is_blank], valid_dict)\n",
+    "    \n",
+    "    # white cols - validated for all samples\n",
+    "    # MORPHOSPECIES_DESCRIPTION not checked\n",
     "    # DESCRIPTION_OF_COLLECTION_METHOD not checked\n",
-    "    validate_int('TIME_ELAPSED_FROM_COLLECTION_TO_PLATING', df, na_values=[''])\n",
-    "    # PHOTOGRAPH_* columns not checked\n",
-    "    # VOUCHER_ID not checked\n",
+    "    # HABITAT not checked\n",
     "    # PRESERVATION_APPROACH not checked - should match DATE_OF_PRESERVATION\n",
-    "    date_pres = validate_date('DATE_OF_PRESERVATION', df, na_values=['']) # allow for empty values unlike DATE_OF_COLLECTION\n",
-    "    compare_dates(before=date_coll, after=date_pres)\n",
-    "    # COLLECTOR_SAMPLE_ID not checked\n",
-    "    validate_int('ELEVATION', df, na_values=[''])\n",
-    "    # OTHER_INFORMATION\tMISC_METADATA\tIDENTIFIED_BY\tIDENTIFIER_AFFILIATION\tIDENTIFIED_HOW not checked\n",
+    "    # COLLECTOR_SAMPLE_ID not checked - STS will need something here\n",
+    "    # VOUCHER_ID not checked\n",
+    "    validate_float('ELEVATION', df, na_values=[''])\n",
+    "    # OTHER_INFORMATION not checked\n",
+    "    # MISC_METADATA not checked\n",
+    "    # IDENTIFIED_BY not checked\n",
+    "    # IDENTIFIER_AFFILIATION not checked\n",
     "        \n",
-    "    logging.info('# ended validate_partner_manifest_v.{}'.format(version))\n",
+    "    logging.info('# ended validate_bioscan_partner_manifest_v.{}'.format(version))\n",
     "\n",
     "    return df\n",
     "\n",
     "# fn = '../../results/partner_manifests/IRD-Neandersquito_T222Amplicon_Manifest_V2.0.xlsx'\n",
-    "df = validate(fn, template_fn, verbose=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "c342af6c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] # manifest ../results/20220405/NBGW-[20210527]-manifest.xlsx\n",
-      "[WARNING] extra columns in filled manifest compared to template: {'PLATE_TEMPERATURE_STORAGE', 'SORTING_SOLUTION_USED', 'CATCH_BOTTLE_TEMPERATURE_STORAGE'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = validate('../results/20220405/NBGW-[20210527]-manifest.xlsx', template_fn, verbose=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c238872a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] # manifest ../results/20220405/NBGW-[20210805]-manifest.xlsx\n",
-      "[WARNING] extra columns in filled manifest compared to template: {'PLATE_TEMPERATURE_STORAGE', 'SORTING_SOLUTION_USED', 'CATCH_BOTTLE_TEMPERATURE_STORAGE'}\n",
-      "[WARNING] ORDER: found unexpected rank for Acari (taxid 6933): subclass\n",
-      "[WARNING] ORDER: found unexpected rank for Collembola (taxid 30001): class\n",
-      "[ERROR] FAMILY: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
-      "[ERROR] FAMILY: {'Not_applicable'} not found in NCBI Taxonomy\n",
-      "[ERROR] GENUS: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
-      "[ERROR] GENUS: {'Not_applicable'} not found in NCBI Taxonomy\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = validate('../results/20220405/NBGW-[20210805]-manifest.xlsx', template_fn, verbose=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "f441b0df",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] # manifest ../results/20220405/NBGW-[20210903]-manifest.xlsx\n",
-      "[WARNING] extra columns in filled manifest compared to template: {'PLATE_TEMPERATURE_STORAGE', 'SORTING_SOLUTION_USED', 'CATCH_BOTTLE_TEMPERATURE_STORAGE'}\n",
-      "[ERROR] ORDER: {'Opilones'} not found in NCBI Taxonomy\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = validate('../results/20220405/NBGW-[20210903]-manifest.xlsx', template_fn, verbose=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "9524459e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] # manifest ../results/20220405/NBGW-[20210930]-manifest.xlsx\n",
-      "[WARNING] extra columns in filled manifest compared to template: {'PLATE_TEMPERATURE_STORAGE', 'SORTING_SOLUTION_USED', 'CATCH_BOTTLE_TEMPERATURE_STORAGE'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = validate('../results/20220405/NBGW-[20210930]-manifest.xlsx', template_fn, verbose=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "fdff8970",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] # manifest ../results/20220405/NBGW-[20211026]-manifest.xlsx\n",
-      "[WARNING] extra columns in filled manifest compared to template: {'PLATE_TEMPERATURE_STORAGE', 'SORTING_SOLUTION_USED', 'CATCH_BOTTLE_TEMPERATURE_STORAGE'}\n",
-      "[ERROR] found non-integer value in TIME_ELAPSED_FROM_COLLECTION_TO_PLATING: \"0.5\"\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = validate('../results/20220405/NBGW-[20211026]-manifest.xlsx', template_fn, verbose=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "962321eb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] # manifest ../results/20220405/NBGW-[20211130]-manifest.xlsx\n",
-      "[WARNING] extra columns in filled manifest compared to template: {'PLATE_TEMPERATURE_STORAGE', 'SORTING_SOLUTION_USED', 'CATCH_BOTTLE_TEMPERATURE_STORAGE'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = validate('../results/20220405/NBGW-[20211130]-manifest.xlsx', template_fn, verbose=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "940b497d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] # manifest ../results/20220405/NBGW-[20220105]-manifest.xlsx\n",
-      "[WARNING] extra columns in filled manifest compared to template: {'PLATE_TEMPERATURE_STORAGE', 'SORTING_SOLUTION_USED', 'CATCH_BOTTLE_TEMPERATURE_STORAGE'}\n",
-      "[WARNING] ORDER: found unexpected rank for Collembola (taxid 30001): class\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = validate('../results/20220405/NBGW-[20220105]-manifest.xlsx', template_fn, verbose=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "3c0658fc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] # manifest ../results/20220405/NBGW-[20220201]-manifest.xlsx\n",
-      "[WARNING] extra columns in filled manifest compared to template: {'PLATE_TEMPERATURE_STORAGE', 'SORTING_SOLUTION_USED', 'CATCH_BOTTLE_TEMPERATURE_STORAGE'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = validate('../results/20220405/NBGW-[20220201]-manifest.xlsx', template_fn, verbose=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "f38deb80",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] # manifest ../results/20220405/NHM-BIOSCAN-Manifest_05042022.xlsx\n",
-      "[WARNING] trailing spaces found in column 'FAMILY', SERIES [396]. Removing for validation\n",
-      "[WARNING] trailing spaces found in column 'GENUS', SERIES [294, 295, 394, 395, 397, 398, 409, 410, 411, 412, 635, 636, 639]. Removing for validation\n",
-      "[WARNING] trailing spaces found in column 'SCIENTIFIC_NAME', SERIES [294, 295]. Removing for validation\n",
-      "[WARNING] extra columns in filled manifest compared to template: {'BAITED_TRAPS', 'Other/best taxon ID', 'PLATE_TEMPERATURE_STORAGE', 'CATCH_BOTTLE_TEMPERATURE_STORAGE', 'SORTING_SOLUTION_USED'}\n",
-      "[ERROR] template columns missing from filled manifest: {'MISC_METADATA'}\n",
-      "[ERROR] for blanks, ORGANISM_PART expected to be BLANK_SAMPLE, found {'NOT_APPLICABLE'}\n",
-      "[WARNING] for blanks, NOT_APPLICABLE expected, but not found in columns ['CATCH_LOT', 'BOTTLE_DIRECTION', 'HAZARD_GROUP', 'REGULATORY_COMPLIANCE', 'DATE_OF_COLLECTION', 'COLLECTION_LOCATION', 'DECIMAL_LATITUDE', 'DECIMAL_LONGITUDE', 'WHAT_3_WORDS']\n",
-      "[ERROR] ORDER: unexpected case for \"NOT_APPLICABLE\", changing to \"Not_applicable\" for validation\n",
-      "[ERROR] ORDER: {'Not_applicable'} not found in NCBI Taxonomy\n",
-      "[WARNING] ORDER: found unexpected rank for Acari (taxid 6933): subclass\n",
-      "[WARNING] ORDER: found unexpected rank for Arachnida (taxid 6854): class\n",
-      "[WARNING] ORDER: found unexpected rank for Collembola (taxid 30001): class\n",
-      "[ERROR] invalid times in 'DURATION_OF_COLLECTION': ['P3D' 'P6D' 'P1D' 'P7D']\n",
-      "[ERROR] invalid dates in 'DATE_OF_PRESERVATION': ['NOT_APPLICABLE']\n"
-     ]
-    }
-   ],
-   "source": [
-    "df = validate('../results/20220405/NHM-BIOSCAN-Manifest_05042022.xlsx', template_fn, verbose=False)"
+    "df = validate_bioscan(fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
+    "                      template_fn='../data/BIOSCAN_Manifest_V2.0_20221017.xlsx', \n",
+    "                      verbose=True,\n",
+    "                      samples_sheet='TAB 5 DO NOT EDIT - TEST Met')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "597705bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b170f12",
    "metadata": {},
    "outputs": [],
    "source": []
